<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Indicador de carga -->
        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".ui.artist.ArtistDetailFragment"
            android:padding="16dp">

            <ImageView
                android:id="@+id/artistCover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/album_cover"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/artistTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:paddingTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/artistCover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Artist Name" />

            <TextView
                android:id="@+id/artistDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/artistTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Artist Description" />

            <!-- Birth date Section -->
            <TextView
                android:id="@+id/birthDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/artistDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/birth_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/birthDateLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                tools:text="Birth Date Artist" />

            <!-- Albums Section -->
            <TextView
                android:id="@+id/albumsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/birthDate"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/title_home"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/albumsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/albumsLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                tools:text="1. Album Name \n2. Another Album-" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</ScrollView>
